# NEXTNetPy

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  Untitled.ipynb  binding.cpp  create-release.sh  doc-requirements.txt  index.html  knn.ipynb  knn.npy  main.cpp  mkdocs.yml  pk.npy  pyproject.toml
.github/workflows/: mkdocs.yaml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
assets/data/: french_school.csv
docs/: getting_started.md  index.md  networks.md  simulations.md  simulations_static.md  simulations_temporal.md  tools.md  transmission_distributions.md
docs/css/: extra.css
docs/tutorials/: clustered.ipynb  temporal_empirical.ipynb
getting_started/: index.html
networks/: index.html
nextnet-python-test-docker/: Dockerfile  run.sh  test.py  test.sh
python/: pyproject.toml  setup.py
python/nextnet/: __init__.py  helper.py
python/nmepinet/: __init__.py  helper.py
scripts/: build-archive.sh  make-release.sh  tag-release.sh
search/: search_index.json
simulations_static/: index.html
simulations_temporal/: index.html
src/: binding.cpp  figures_paper.cpp  figures_paper.hpp  measure_performance.cpp  measure_performance.hpp  networkx.cpp  networkx.hpp  simulation_wrapper.cpp  simulation_wrapper.hpp  tools.cpp  tools.hpp
tests/: define_test.py  measure_time.py  run_test.py  test.ipynb  test.py
tools/: index.html
transmission_distributions/: index.html
tutorials/activity_driven/: activity_driven.ipynb  index.html
tutorials/clustered/: index.html
tutorials/temporal_empirical/: index.html  temporal_empirical.ipynb
