[build-system]
requires = [
    "setuptools>=61.0",
    "scikit-build-core>=0.4.0",
    "cmake>=3.15",
    "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "nextnet"  # Replace with your desired project name
version = "0.2.0"
description = "A Python binding to simulate in C++ epidemics on random networks."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
    { name = "Samuel Cure", email = "samuel.cure@oist.jp" },
    { name = "Florian Pflug" }
]
dependencies = [
    "numpy",
    "tqdm",
    "networkx"
]

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"

[tool.scikit-build-core.cmake]
source-dir = "."
define = [
    "CMAKE_BUILD_TYPE=Release"
]

[tool.scikit-build-core.msdist]
# Include additional files in source distributions
include = [
    "README.md",
    "LICENSE",
    "src/**",
    "extern/**",
    "CMakeLists.txt"
]

[tool.setuptools]
packages = ["nextnet"]

[tool.setuptools.package-data]
nextnet = [
    "extern/epidemics/**",
]
