[build-system]
requires = [
    "setuptools>=61.0",
    "scikit-build-core>=0.4.0",
    "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "nextnet" 
version = "0.9.5-2"
description = "Python bindings for NEXT-NET, a simulator of epidemics on complex networks."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "LGPLv3" }
authors = [
    { name = "Samuel Cure", email = "samuel.cure@oist.jp" },
    { name = "Florian G. Pflug", email = "florian.pflug@oist.jp"  }
]
dependencies = [
    "numpy",
    "scipy",
    "networkx"
]

[tool.scikit-build]
cmake.source-dir = "."
cmake.build-type = "Release"

[tool.scikit-build-core.cmake]
source-dir = "."
define = [
    "CMAKE_BUILD_TYPE=Release"
]

[tool.scikit-build-core.msdist]
include = [
    "README.md",
    "COPYING",
    "src/**",
    "extern/pybind11/include",
    "extern/NEXTNet/nextnet/*",
    "extern/NEXTNet/ext/dyndist/dyndist/*",
    "extern/NEXTNet/ext/prio_queue/prio_queue.hpp",
    "extern/boost-*/include/**",
    "CMakeLists.txt"
]

[tool.setuptools]
packages = ["nextnet"]
